force-app/main/default/objects/Opportunity/fields/Intapp_Open_Consulting_Partner__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Open_Consulting_Partner__c</fullName>
    <description>Which Partner is doing consulting Services, if needed?

Part of Technical Debt Project: Week 9 fields (Expiring June 8)</description>
    <inlineHelpText>Which Partner is doing consulting Services, if needed?</inlineHelpText>
    <label>Intapp Open-Consulting Prtnr (Exp June8)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Athenian</fullName>
            </value>
            <value>
                <fullName>Aurora North Software</fullName>
            </value>
            <value>
                <fullName>David Greenberg</fullName>
            </value>
            <value>
                <fullName>Feynbrook</fullName>
            </value>
            <value>
                <fullName>HBR</fullName>
            </value>
            <value>
                <fullName>Hinshaw</fullName>
            </value>
            <value>
                <fullName>Hyperion</fullName>
            </value>
            <value>
                <fullName>InOutSource</fullName>
            </value>
            <value>
                <fullName>No consulting partner</fullName>
            </value>
            <value>
                <fullName>OPES</fullName>
            </value>
            <value>
                <fullName>Pinnacle</fullName>
            </value>
            <value>
                <fullName>PLA</fullName>
            </value>
            <value>
                <fullName>Professional Plus Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>