force-app/main/default/objects/Opportunity/fields/Intapp_Open_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Open_Go_Live_Date__c</fullName>
    <description>What is Milan&apos;s forecast date for this Intapp Open customer to go live?</description>
    <inlineHelpText>What is Milan&apos;s forecast date for this Intapp Open customer to go live?</inlineHelpText>
    <label>Intapp Open Go-Live Date</label>
    <type>Date</type>
</CustomField>