force-app/main/default/objects/Opportunity/fields/Intapp_Open_Version_Required_for_Go_live__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Open_Version_Required_for_Go_live__c</fullName>
    <description>For Intapp Open deals that require features not yet released, which Intapp Open version will the implementation require?</description>
    <inlineHelpText>For Intapp Open deals that require features not yet released, which Intapp Open version will the implementation require?</inlineHelpText>
    <label>Intapp Open Version Required for Go-live</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2.0 (October 2013)</fullName>
            </value>
            <value>
                <fullName>2.1 (January 2014)</fullName>
            </value>
            <value>
                <fullName>2.2 (April 2014)</fullName>
            </value>
            <value>
                <fullName>2.3 (July 2014)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>