force-app/main/default/objects/Opportunity/fields/IntApp_Terms_Status__c.field-meta.xml
<CustomField>
    <fullName>IntApp_Terms_Status__c</fullName>
    <description>How far have we progressed on the IntApp Terms negotiation?</description>
    <inlineHelpText>How far have we progressed on the IntApp Terms negotiation?</inlineHelpText>
    <label>Intapp Terms Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement reached</fullName>
            </value>
            <value>
                <fullName>Negotiating Terms</fullName>
            </value>
            <value>
                <fullName>Negotiating with budget owner</fullName>
            </value>
            <value>
                <fullName>Not needed/existing terms</fullName>
            </value>
            <value>
                <fullName>Online Terms</fullName>
            </value>
            <value>
                <fullName>Online Terms - to be negotiated</fullName>
            </value>
            <value>
                <fullName>Terms not yet presented</fullName>
            </value>
            <value>
                <fullName>Terms presented</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Pre v9.4.1 – needs review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>