force-app/main/default/objects/Opportunity/fields/Integration_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Integration_Use_Case__c</fullName>
    <description>This is a piclist that is required when integration checkbox is selected as main use case. This was developed after Main Use Case fields.</description>
    <label>Integration Use Cases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Integration__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Integration Platform</fullName>
            </value>
            <value>
                <fullName>User Provisioning/NHI</fullName>
            </value>
            <value>
                <fullName>Client Matter Propagation/NBI</fullName>
            </value>
            <value>
                <fullName>Elite Integration</fullName>
            </value>
            <value>
                <fullName>Additional appliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>