force-app/main/default/objects/Opportunity/fields/Internal_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Notification Sent?</label>
    <type>Checkbox</type>
</CustomField>