force-app/main/default/objects/Opportunity/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Date that the Win/Loss analysis discussion took place</description>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>