force-app/main/default/objects/Opportunity/fields/Invoice_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Paid__c</fullName>
    <description>The date the invoice was paid</description>
    <label>Invoice Date Paid</label>
    <type>Date</type>
</CustomField>