force-app/main/default/objects/Opportunity/fields/Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total__c</fullName>
    <formula>Net_Renewal_Amount__c + Maintenance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice Total  = Net Renewal Amount + Recurring Amount Change (&quot;Recurring Amount Change&quot; shows accurate amount only when opportunity &quot;Stage&quot; = &quot;Closed Won&quot;)</inlineHelpText>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>