force-app/main/default/objects/Opportunity/fields/ITM_Options__c.field-meta.xml
<CustomField>
    <fullName>ITM_Options__c</fullName>
    <label>ITM Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pilot Program</fullName>
            </value>
            <value>
                <fullName>Time Journal</fullName>
            </value>
            <value>
                <fullName>Custom ITM project</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>