force-app/main/default/objects/Opportunity/fields/KeyApplication__c.field-meta.xml
<CustomField>
    <fullName>KeyApplication__c</fullName>
    <label>Key Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASCII Files</fullName>
            </value>
            <value>
                <fullName>bTrieve</fullName>
            </value>
            <value>
                <fullName>CMS Open</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Fox Pro</fullName>
            </value>
            <value>
                <fullName>IBM DB2</fullName>
            </value>
            <value>
                <fullName>Informix Dynamic Server</fullName>
            </value>
            <value>
                <fullName>Interaction 4.x</fullName>
            </value>
            <value>
                <fullName>Interaction 5</fullName>
            </value>
            <value>
                <fullName>LDAP Directory</fullName>
            </value>
            <value>
                <fullName>Lotus Notes</fullName>
            </value>
            <value>
                <fullName>Mainframe</fullName>
            </value>
            <value>
                <fullName>MSFT Active Directory</fullName>
            </value>
            <value>
                <fullName>MSFT Desktop Applications (Access, Excel)</fullName>
            </value>
            <value>
                <fullName>MSFT Exchange</fullName>
            </value>
            <value>
                <fullName>MSFT SQL Server</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Peoplesoft</fullName>
            </value>
            <value>
                <fullName>Sybase</fullName>
            </value>
            <value>
                <fullName>Vantive</fullName>
            </value>
            <value>
                <fullName>Web Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>