force-app/main/default/objects/Opportunity/fields/KeyLicensedFeature__c.field-meta.xml
<CustomField>
    <fullName>KeyLicensedFeature__c</fullName>
    <label>Key Licensed Feature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>ASCII Files</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
            <value>
                <fullName>HTTP/HTTPS</fullName>
            </value>
            <value>
                <fullName>LDAP</fullName>
            </value>
            <value>
                <fullName>ODBC</fullName>
            </value>
            <value>
                <fullName>OEM - Bridgeway</fullName>
            </value>
            <value>
                <fullName>OEM - Interaction</fullName>
            </value>
            <value>
                <fullName>OEM - Other</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Replication</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>SQL - DB2</fullName>
            </value>
            <value>
                <fullName>SQL - Informix</fullName>
            </value>
            <value>
                <fullName>SQL - MSFT</fullName>
            </value>
            <value>
                <fullName>SQL - Oracle</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>