force-app/main/default/objects/Opportunity/fields/Last_Entered_Pre_Shopping_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Entered_Pre_Shopping_Date__c</fullName>
    <description>This is the date when the opportunity most recently entered the Pre-Shopping phase.</description>
    <inlineHelpText>This is the date when the opportunity most recently entered the Pre-Shopping phase.</inlineHelpText>
    <label>Last Entered Investigation</label>
    <type>Date</type>
</CustomField>