force-app/main/default/objects/Opportunity/fields/Last_Entered_Pre_Shopping_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Last_Entered_Pre_Shopping_Date_New__c</fullName>
    <label>Last Entered Pre-Shopping Date</label>
    <type>Date</type>
</CustomField>