force-app/main/default/objects/Opportunity/fields/Last_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change_Date__c</fullName>
    <description>This is the date when the opportunity last changed stage.</description>
    <inlineHelpText>This is the date when the opportunity last changed stage.</inlineHelpText>
    <label>Last Stage Change Date</label>
    <type>Date</type>
</CustomField>