force-app/main/default/objects/Opportunity/fields/Law_Firm_Conflicts_Type__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Conflicts_Type__c</fullName>
    <description>What style of conflicts checking does the law firm use?</description>
    <inlineHelpText>What style of conflicts checking does the law firm use?</inlineHelpText>
    <label>Law Firm Conflicts Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lawyer Led</fullName>
            </value>
            <value>
                <fullName>Compliance Team Lead</fullName>
            </value>
            <value>
                <fullName>Blended (Lawyer/Compliance Team)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>