force-app/main/default/objects/Opportunity/fields/LegalKEY_Conversion_Opp__c.field-meta.xml
<CustomField>
    <fullName>LegalKEY_Conversion_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LegalKEY Conversion Opp</label>
    <type>Checkbox</type>
</CustomField>