force-app/main/default/objects/Opportunity/fields/License_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Period_Start_Date__c</fullName>
    <description>When does this license period start?</description>
    <inlineHelpText>When does this license period start?</inlineHelpText>
    <label>License Period Start Date</label>
    <type>Date</type>
</CustomField>