force-app/main/default/objects/Opportunity/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>Is this opportunity for an annual license or a perpetual license?</description>
    <inlineHelpText>Is this opportunity for an annual license or a perpetual license?</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Services only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>