force-app/main/default/objects/Opportunity/fields/Loss_Detail__c.field-meta.xml
<CustomField>
    <fullName>Loss_Detail__c</fullName>
    <inlineHelpText>If processing a cancellation, please determine the detailed cancellation type here.</inlineHelpText>
    <label>Cancellation Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Product Downgrade - Customer Success</fullName>
            </value>
            <value>
                <fullName>Customer Product Cancellation - Customer Success</fullName>
            </value>
            <value>
                <fullName>Failed POC / ROR / Cancelled Sale</fullName>
            </value>
            <value>
                <fullName>Partner Cancellation</fullName>
            </value>
            <value>
                <fullName>Credit Adjustment - Data Cleanup</fullName>
            </value>
            <value>
                <fullName>Customer Product Downgrade - End User License</fullName>
            </value>
            <value>
                <fullName>Customer Cancellation - Firm Dissolution</fullName>
            </value>
            <value>
                <fullName>Customer Cancellation - Firm Merger</fullName>
            </value>
            <value>
                <fullName>License Conversion</fullName>
            </value>
            <value>
                <fullName>Customer Product Downgrade - CPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>