force-app/main/default/objects/Opportunity/fields/Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Loss_Type__c</fullName>
    <inlineHelpText>Select a type of loss.</inlineHelpText>
    <label>Loss Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Loss</fullName>
            </value>
            <value>
                <fullName>Loss to Dissolution</fullName>
            </value>
            <value>
                <fullName>Loss with Salvage</fullName>
            </value>
            <value>
                <fullName>Loss - ROR/POC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Downgrade - Merger</fullName>
            </value>
            <value>
                <fullName>Downgrade - Bill Consolidation</fullName>
            </value>
            <value>
                <fullName>Downgrade - Module or Extension</fullName>
            </value>
            <value>
                <fullName>Downgrade - Customer Retention</fullName>
            </value>
            <value>
                <fullName>Downgrade - End User License</fullName>
            </value>
            <value>
                <fullName>Downgrade - License Conversion</fullName>
            </value>
            <value>
                <fullName>Downgrade - License Band Reduction</fullName>
            </value>
            <value>
                <fullName>Downgrade - CPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>