force-app/main/default/objects/Opportunity/fields/Lost_to__c.field-meta.xml
<CustomField>
    <fullName>Lost_to__c</fullName>
    <description>For Closed Won deals, who was the primary competitor that we beat? For Closed-Lost deals, which competitor did we lose to?</description>
    <inlineHelpText>For Closed Won deals, who was the primary competitor that we beat? For Closed-Lost deals, which competitor did we lose to?</inlineHelpText>
    <label>Won against / Lost to</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Frayman Group</fullName>
            </value>
            <value>
                <fullName>Prosperoware</fullName>
            </value>
            <value>
                <fullName>Metastorm</fullName>
            </value>
            <value>
                <fullName>DocAuto</fullName>
            </value>
            <value>
                <fullName>RBRO</fullName>
            </value>
            <value>
                <fullName>Wertheim / Winc Tools</fullName>
            </value>
            <value>
                <fullName>HP Autonomy</fullName>
            </value>
            <value>
                <fullName>Zapproved Legal Hold Pro</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>APS (DTE)</fullName>
            </value>
            <value>
                <fullName>Bellefield iTimeKeep</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Legal55</fullName>
            </value>
            <value>
                <fullName>Rekoop</fullName>
            </value>
            <value>
                <fullName>SmartTime</fullName>
            </value>
            <value>
                <fullName>TimeKM</fullName>
            </value>
            <value>
                <fullName>Tikit</fullName>
            </value>
            <value>
                <fullName>BizTalk</fullName>
            </value>
            <value>
                <fullName>SSIS</fullName>
            </value>
            <value>
                <fullName>Whitehill</fullName>
            </value>
            <value>
                <fullName>SAP NetWeaver PI</fullName>
            </value>
            <value>
                <fullName>Younts</fullName>
            </value>
            <value>
                <fullName>K2</fullName>
            </value>
            <value>
                <fullName>Elegrity</fullName>
            </value>
            <value>
                <fullName>Paayatech</fullName>
            </value>
            <value>
                <fullName>In-house development</fullName>
            </value>
            <value>
                <fullName>Project Deferred Indeterminably</fullName>
            </value>
            <value>
                <fullName>Pricing Considerations</fullName>
            </value>
            <value>
                <fullName>Loss of Internal Interest</fullName>
            </value>
            <value>
                <fullName>Loss of Internal Champion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>