force-app/main/default/objects/Opportunity/fields/Management_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Management_Approval_Notes__c</fullName>
    <label>Management Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>