force-app/main/default/objects/Opportunity/fields/Maximum_Segment_Index__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Segment_Index__c</fullName>
    <description>BIZ-46116: This is used to calculate maximum segment index value of Opportunity Product</description>
    <label>Maximum Segment Index</label>
    <summarizedField>OpportunityLineItem.Segment_Index__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>