force-app/main/default/objects/Opportunity/fields/MD_Eval_Complete__c.field-meta.xml
<CustomField>
    <fullName>MD_Eval_Complete__c</fullName>
    <formula>AND(
  NOT(ISBLANK(TEXT(MD_Eval_Control__c))),
  NOT(ISBLANK(TEXT(MD_Eval_Pain__c))),
  NOT(ISBLANK(TEXT(MD_Eval_Power__c))),
  NOT(ISBLANK(TEXT(MD_Eval_Value__c))),
  NOT(ISBLANK(TEXT(MD_Eval_Vision__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD Strength of Sale Complete?</label>
    <type>Checkbox</type>
</CustomField>