force-app/main/default/objects/Opportunity/fields/MD_Eval_Pain__c.field-meta.xml
<CustomField>
    <fullName>MD_Eval_Pain__c</fullName>
    <description>Pain: critical business issue, problem or potential missed opportunity</description>
    <inlineHelpText>Pain: critical business issue, problem or potential missed opportunity</inlineHelpText>
    <label>MD Eval: Pain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00 - Customer has not indicated pain or needs/requirements</fullName>
            </value>
            <value>
                <fullName>01 - Salesperson assumes Sponsor’s needs/requirements</fullName>
            </value>
            <value>
                <fullName>02 - Sponsor admits needs/requirements</fullName>
            </value>
            <value>
                <fullName>03 - Sponsor admits pain</fullName>
            </value>
            <value>
                <fullName>04 - Salesperson explores key reasons for Sponsor&apos;s pain</fullName>
            </value>
            <value>
                <fullName>05 - Sponsor agrees to documented pain and reasons (Sponsor Email Required)</fullName>
            </value>
            <value>
                <fullName>06 - Salesperson assumes Power Sponsor’s needs/requirements</fullName>
            </value>
            <value>
                <fullName>07 - Power Sponsor admits needs/requirements</fullName>
            </value>
            <value>
                <fullName>08 - Power Sponsor admits pain</fullName>
            </value>
            <value>
                <fullName>09 - Salesperson explores key reasons for Power Sponsor&apos;s pain</fullName>
            </value>
            <value>
                <fullName>10 - Power Sponsor agrees to documented pain and reasons (Power Sponsor Email Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>