force-app/main/default/objects/Opportunity/fields/MD_Eval_Vision__c.field-meta.xml
<CustomField>
    <fullName>MD_Eval_Vision__c</fullName>
    <description>Vision: prospect&apos;s view of capabilities needed to solve a problem</description>
    <inlineHelpText>Vision: prospect&apos;s view of capabilities needed to solve a problem</inlineHelpText>
    <label>MD Eval: Vision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00 - No vision established</fullName>
            </value>
            <value>
                <fullName>01 - Customer vision developed internally</fullName>
            </value>
            <value>
                <fullName>02 - Customer vision developed by competition</fullName>
            </value>
            <value>
                <fullName>03 - Vision for potential Sponsor created in product terms</fullName>
            </value>
            <value>
                <fullName>04 - Differentiated vision for potential Sponsor created in capability terms</fullName>
            </value>
            <value>
                <fullName>05 - Differentiated vision documented to potential Sponsor</fullName>
            </value>
            <value>
                <fullName>06 - Documented vision agreed upon by Sponsor (Sponsor Email Required)</fullName>
            </value>
            <value>
                <fullName>07 - Vision for potential Power Sponsor created in product terms</fullName>
            </value>
            <value>
                <fullName>08 - Differentiated vision for potential Power created in capability terms</fullName>
            </value>
            <value>
                <fullName>09 - Differentiated vision documented to potential Power Sponsor</fullName>
            </value>
            <value>
                <fullName>10 - Documented vision agreed upon by Power Sponsor (Power Sponsor Email Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>