force-app/main/default/objects/Opportunity/fields/Merged_With__c.field-meta.xml
<CustomField>
    <fullName>Merged_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merged With</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Merged Opportunities</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>