force-app/main/default/objects/Opportunity/fields/Metrics_we_will_impact__c.field-meta.xml
<CustomField>
    <fullName>Metrics_we_will_impact__c</fullName>
    <inlineHelpText>What are the KPIs the customer wants to influence as a result of our solution?</inlineHelpText>
    <label>Metrics</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>