force-app/main/default/objects/Opportunity/fields/Migration_Contract__c.field-meta.xml
<CustomField>
    <fullName>Migration_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migration Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (Migration Contract)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>