force-app/main/default/objects/Opportunity/fields/Mobile_security_issues_resolved__c.field-meta.xml
<CustomField>
    <fullName>Mobile_security_issues_resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the IT team validated or addressed how they intend to manage security in relation to mobility? (If mobility included in the POC)

Part of Technical Debt Project: Week 8 fields (Expiring June 1)</description>
    <inlineHelpText>Has the IT team validated or addressed how they intend to manage security in relation to mobility? (If mobility included in the POC)</inlineHelpText>
    <label>Mobile scrty issues resolved? (Exp June1</label>
    <type>Checkbox</type>
</CustomField>