force-app/main/default/objects/Opportunity/fields/New_Deal__c.field-meta.xml
<CustomField>
    <fullName>New_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if the this  opportunity is a new deal</description>
    <label>New Deal</label>
    <type>Checkbox</type>
</CustomField>