force-app/main/default/objects/Opportunity/fields/New_Expiration__c.field-meta.xml
<CustomField>
    <fullName>New_Expiration__c</fullName>
    <formula>ADDMONTHS( Current_Term_Expiration__c ,Months_Extended__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Expiration</label>
    <type>Date</type>
</CustomField>