force-app/main/default/objects/Opportunity/fields/Next_Contact__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact__c</fullName>
    <description>Date of Next Scheduled contact</description>
    <label>Next Contact</label>
    <type>Date</type>
</CustomField>