force-app/main/default/objects/Opportunity/fields/Next_Step_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Updated_On__c</fullName>
    <label>Next Step Updated On</label>
    <type>DateTime</type>
</CustomField>